Update OnPrem Model struct
