# api/swagger.json
@@ -729,6 +729,23 @@
                 }
             }
         },
+        "onprem.OnPremInfra": {
+            "type": "object",
+            "required": [
+                "servers"
+            ],
+            "properties": {
+                "network": {
+                    "$ref": "#/definitions/onprem.NetworkProperty"
+                },
+                "servers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/onprem.ServerProperty"
+                    }
+                }
+            }
+        },
         "onprem.OsProperty": {
             "type": "object",
             "required": [
@@ -845,10 +862,10 @@
         "pkg_api_rest_handler.MyCloudModel": {
             "type": "object",
             "required": [
-                "cloud"
+                "cloudinfra"
             ],
             "properties": {
-                "cloud": {
+                "cloudinfra": {
                     "$ref": "#/definitions/model.TbMciDynamicReq"
                 },
                 "id": {
@@ -865,9 +882,6 @@
         },
         "pkg_api_rest_handler.MyOnPremModel": {
             "type": "object",
-            "required": [
-                "servers"
-            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -878,14 +892,8 @@
                 "name": {
                     "type": "string"
                 },
-                "network": {
-                    "$ref": "#/definitions/onprem.NetworkProperty"
-                },
-                "servers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/onprem.ServerProperty"
-                    }
+                "onpreminfra": {
+                    "$ref": "#/definitions/onprem.OnPremInfra"
                 },
                 "version": {
                     "type": "string"
@@ -895,10 +903,10 @@
         "pkg_api_rest_handler.ReqCreateCloudModel": {
             "type": "object",
             "required": [
-                "cloud"
+                "cloudinfra"
             ],
             "properties": {
-                "cloud": {
+                "cloudinfra": {
                     "$ref": "#/definitions/model.TbMciDynamicReq"
                 },
                 "id": {
@@ -915,9 +923,6 @@
         },
         "pkg_api_rest_handler.ReqCreateOnPremModel": {
             "type": "object",
-            "required": [
-                "servers"
-            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -928,14 +933,8 @@
                 "name": {
                     "type": "string"
                 },
-                "network": {
-                    "$ref": "#/definitions/onprem.NetworkProperty"
-                },
-                "servers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/onprem.ServerProperty"
-                    }
+                "onpreminfra": {
+                    "$ref": "#/definitions/onprem.OnPremInfra"
                 },
                 "version": {
                     "type": "string"
@@ -945,10 +944,10 @@
         "pkg_api_rest_handler.ReqUpdateCloudModel": {
             "type": "object",
             "required": [
-                "cloud"
+                "cloudinfra"
             ],
             "properties": {
-                "cloud": {
+                "cloudinfra": {
                     "$ref": "#/definitions/model.TbMciDynamicReq"
                 },
                 "id": {
@@ -965,9 +964,6 @@
         },
         "pkg_api_rest_handler.ReqUpdateOnPremModel": {
             "type": "object",
-            "required": [
-                "servers"
-            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -978,14 +974,8 @@
                 "name": {
                     "type": "string"
                 },
-                "network": {
-                    "$ref": "#/definitions/onprem.NetworkProperty"
-                },
-                "servers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/onprem.ServerProperty"
-                    }
+                "onpreminfra": {
+                    "$ref": "#/definitions/onprem.OnPremInfra"
                 },
                 "version": {
                     "type": "string"
@@ -995,10 +985,10 @@
         "pkg_api_rest_handler.ResCreateCloudModel": {
             "type": "object",
             "required": [
-                "cloud"
+                "cloudinfra"
             ],
             "properties": {
-                "cloud": {
+                "cloudinfra": {
                     "$ref": "#/definitions/model.TbMciDynamicReq"
                 },
                 "id": {
@@ -1015,9 +1005,6 @@
         },
         "pkg_api_rest_handler.ResCreateOnPremModel": {
             "type": "object",
-            "required": [
-                "servers"
-            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -1028,14 +1015,8 @@
                 "name": {
                     "type": "string"
                 },
-                "network": {
-                    "$ref": "#/definitions/onprem.NetworkProperty"
-                },
-                "servers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/onprem.ServerProperty"
-                    }
+                "onpreminfra": {
+                    "$ref": "#/definitions/onprem.OnPremInfra"
                 },
                 "version": {
                     "type": "string"
@@ -1045,10 +1026,10 @@
         "pkg_api_rest_handler.ResGetCloudModel": {
             "type": "object",
             "required": [
-                "cloud"
+                "cloudinfra"
             ],
             "properties": {
-                "cloud": {
+                "cloudinfra": {
                     "$ref": "#/definitions/model.TbMciDynamicReq"
                 },
                 "id": {
@@ -1076,9 +1057,6 @@
         },
         "pkg_api_rest_handler.ResGetOnPremModel": {
             "type": "object",
-            "required": [
-                "servers"
-            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -1089,14 +1067,8 @@
                 "name": {
                     "type": "string"
                 },
-                "network": {
-                    "$ref": "#/definitions/onprem.NetworkProperty"
-                },
-                "servers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/onprem.ServerProperty"
-                    }
+                "onpreminfra": {
+                    "$ref": "#/definitions/onprem.OnPremInfra"
                 },
                 "version": {
                     "type": "string"
@@ -1133,10 +1105,10 @@
         "pkg_api_rest_handler.ResUpdateCloudModel": {
             "type": "object",
             "required": [
-                "cloud"
+                "cloudinfra"
             ],
             "properties": {
-                "cloud": {
+                "cloudinfra": {
                     "$ref": "#/definitions/model.TbMciDynamicReq"
                 },
                 "id": {
@@ -1153,9 +1125,6 @@
         },
         "pkg_api_rest_handler.ResUpdateOnPremModel": {
             "type": "object",
-            "required": [
-                "servers"
-            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -1166,14 +1135,8 @@
                 "name": {
                     "type": "string"
                 },
-                "network": {
-                    "$ref": "#/definitions/onprem.NetworkProperty"
-                },
-                "servers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/onprem.ServerProperty"
-                    }
+                "onpreminfra": {
+                    "$ref": "#/definitions/onprem.OnPremInfra"
                 },
                 "version": {
                     "type": "string"
